feat: 建立Alert的底版
* 使用JFXAlert結合BuilderPattern建立Alert底版