@@ -23,7 +23,25 @@ dependencies {
     implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.2'
 }
 
+run {
+    jvmArgs = [
+            "--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+    ]
+}
+
+
+
 javafx {
     version = "15"
-    modules = [ 'javafx.controls' ,'javafx.fxml', 'javafx.web']
+    modules = [ 'javafx.controls' ,'javafx.fxml', 'javafx.web', 'javafx.graphics']
 }
